Fairbank theme: fix event page imgs in node body (alignment).#1182

--- a/themes/custom/fairbanks_center/css/fairbanks-center.css
+++ b/themes/custom/fairbanks_center/css/fairbanks-center.css
@@ -62,6 +62,14 @@ h4 {
 p {
 	margin-bottom: 20px;
 	}
+	
+.node-type-event .node-event .field-name-body p {
+    clear: both;
+}
+	
+	
+.node-type-event .node-event .field-name-body p img.image-style-os-files-large {padding:0 15px 15px 0;}
+
 
 li {
 	line-height: 18px;
